--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                 </div>
                 <div class="pr-4 text-right">
                     <div class="d-block pt-2 mt-2">
+                        @*<div class="d-inline size-12">Hola @User.Identity.Name!</div>*@
                         <div class="d-inline size-12">Hola @User.Identity.Name!</div>
                         <a asp-controller="Login" asp-action="Logout">
                             <div class="d-inline material-icons pl-2 c-pointer" style="vertical-align: -8px;">logout</div>
@@ -101,7 +102,7 @@
                             </li>
 
                             <li class="pt-2 pl-4">
-                                <a href="">
+                                <a href="/Security">
                                     <div class="material-icons size-18 pr-1">security</div>
                                     <label>Seguridad</label>
                                 </a>
