--- a/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
+++ b/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
@@ -339,3 +339,7 @@ form .form-group {
     /* For IE6-8 */
     src: local('Material Icons'), local('MaterialIcons-Regular');
 }
+
+input[type=text]{
+    text-transform: uppercase;
+}
