--- a/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
@@ -50,20 +50,21 @@
             </div>
             <div class="modal-body text-left">
                 <form id="frmRegister" action="#" method="post">
+                    <input type="hidden" name="id" id="idEditar" value="0" />
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label class="">Nombre</label>
-                                <input type="text" class="form-control" name="nombre" required />
+                                <input type="text" class="form-control" name="nombre" id="nombre" required />
                             </div>
                         </div>
                         <div class="col-md-3">
-                            <label class="">Dirección</label>
-                            <input type="text" class="form-control" name="ejes" value="" required />
+                            <label class="">Ejes</label>
+                            <input type="number" class="form-control" name="ejes" id="ejes" value="" required />
                         </div>
                         <div class="col-md-3">
                             <label class="">Estatus</label>
-                            <select class="form-control" name="estatus">
+                            <select class="form-control" name="estatus" id="estatus">
                                 <option value="1">Activo</option>
                                 <option value="2">Inactivo</option>
                             </select>
@@ -73,39 +74,39 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label class="">Comentarios</label>
-                                <input type="text" class="form-control" name="mantenimiento" value="" />
+                                <label class="">Mantenimiento</label>
+                                <input type="number" step="0.01" class="form-control" name="mantenimiento" id="mantenimiento" value="" />
                             </div>
                         </div>
                         <div class="col-md-3">
-                            <label class="">Correo</label>
-                            <input type="text" class="form-control" required name="llantas"/>
+                            <label class="">Llantas</label>
+                            <input type="number" step="0.01" class="form-control" required name="llantas" id="llantas" />
                         </div>
                         <div class="col-md-3">
-                            <label class="">Notas</label>
-                            <input type="text" class="form-control" name="litros" value="" />
+                            <label class="">Litros</label>
+                            <input type="number" step="0.01" class="form-control" name="litros" id="litros" value="" />
                         </div>
                         <div class="col-md-3">
-                            <label class="">Notas</label>
-                            <input type="text" class="form-control" name="rendimiento" value="" />
+                            <label class="">Rendimiento</label>
+                            <input type="number" step="0.01" class="form-control" name="rendimiento" id="rendimiento" value="" />
                         </div>
                     </div>
-                    
+
                     <h3>Límites</h3>
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label class="">Peso</label>
-                                <input type="text" class="form-control" name="peso" value="" />
+                                <input type="number" step="0.01" class="form-control" name="limite_peso" id="limite_peso" value="" />
                             </div>
                         </div>
                         <div class="col-md-3">
                             <label class="">Volumen</label>
-                            <input type="text" class="form-control" required name="volumen"/>
+                            <input type="text" class="form-control" required name="limite_volumen" id="limite_volumen" />
                         </div>
                     </div>
 
-                    <button type="submit" class="btn btn-dark guardar" style="width:15%;">
+                    <button type="submit" class="btn btn-dark guardar" style="width:15%;" id="btnAccion">
                         Guardar
                     </button>
                 </form>
@@ -122,28 +123,63 @@
 
 @section Scripts {
     <script>
+        var dataUnidades = [];
+
         $(document).ready(function () {
             loadTable();
             $("#frmRegister").submit(function (event) {
                 event.preventDefault();
                 var jsonData = convertJson($("#frmRegister"));
-                $.post("TypesOfUnits/setUnidades", jsonData, function (res) {
-                    loadTable();
-                    dToast("success", "Se guardo el registro", "Registrado");
-                    $(".guardar").attr("disabled", false);
-                    $('#frmRegister').trigger("reset");
-                }).fail(function (error) {
-                    dToast("error", "Error al tratar de guardar el registro", "Error");
-                    $(".guardar").attr("disabled", false);
-                });
+                if (parseInt($("#idEditar").val()) != 0) {
+                    $.post("TypesOfUnits/putUnidades", jsonData, function (res) {
+                        loadTable();
+                        dToast("success", "Registro actualizado exitosamente.", "Registrado");
+                        $(".guardar").attr("disabled", false);
+                    }).fail(function (error) {
+                        dToast("error", "Error al tratar de guardar el registro", "Error");
+                        $(".guardar").attr("disabled", false);
+                    });
+                } else {
+                    $.post("TypesOfUnits/setUnidades", jsonData, function (res) {
+                        loadTable();
+                        dToast("success", "Se guardo el registro", "Registrado");
+                        $(".guardar").attr("disabled", false);
+                        $('#frmRegister').trigger("reset");
+                    }).fail(function (error) {
+                        dToast("error", "Error al tratar de guardar el registro", "Error");
+                        $(".guardar").attr("disabled", false);
+                    });
+                }
 
             });
         });
 
-        function showModal(titulo = "Title") {
+        function showModal(titulo = "Title", accion, idEditar = 0) {
+            $('#frmRegister').trigger("reset");
+            $(".guardar").html(accion);
             $("#titulo-modal").empty("");
             $("#titulo-modal").html(titulo);
-            $("#modalDiv").modal("show");
+            $("#idEditar").val(idEditar);
+            if (accion == "Editar") {
+                try {
+                    let indice = dataUnidades.findIndex(service => service.id === idEditar);
+                    $("#nombre").val(dataUnidades[indice].nombre);
+                    $("#mantenimiento").val(dataUnidades[indice].mantenimiento);
+                    $("#llantas").val(dataUnidades[indice].llantas);
+                    $("#litros").val(dataUnidades[indice].litros);
+                    $("#limite_peso").val(dataUnidades[indice].limite_peso);
+                    $("#limite_volumen").val(dataUnidades[indice].limite_volumen);
+                    $("#ejes").val(dataUnidades[indice].ejes);
+                    $('#estatus option[value="' + dataUnidades[indice].estatus + '"]').attr("selected", true);
+                    $("#modalDiv").modal("show");
+
+                } catch (error) {
+                    dToast("error", "Error al tratar de editar, intenta recargar la página.", "Error");
+                    $("#modalDiv").modal("hide");
+                }
+            } else {
+                $("#modalDiv").modal("show");
+            }
         }
 
         function loadTable() {
@@ -151,23 +187,27 @@
             stable.destroy();
             $("#table-info").empty();
             $.get("TypesOfUnits/getUnidades", function (res) {
+                dataUnidades = res;
+                console.log(dataUnidades);
                 $.each(res, function (item, key) {
                     $("#table-info").append(`
                          <tr>
                             <td>${nCon(key.nombre)}</td>
-                            <td>$12 km</td>
-                            <td>$12km</td>
-                            <td>$12km</td>
-                            <td>$12km</td>
-                            <td>$12km</td>
-                            <td>$12km</td>
-                            <td>--</td>
-                            <td>2011/04/25</td>
+                            <td>${nCon(key.mantenimiento)}/Km</td>
+                            <td>${nCon(key.llantas)}/Km</td>
+                            <td>${nCon(key.litros)}/Km</td>
+                            <td>Operador</td>
+                            <td>Administrativo</td>
+                            <td>${nCon(key.limite_peso)}/Km</td>
+                            <td>${nCon(key.limite_volumen)}/Km</td>
+                            <td>${nCon(key.ejes)}/Km</td>
                             <td>`+ statusTable(key.estatus) + `</td>
                             <td>
-                                <span class="material-icons">
-                                    mode_edit
-                                </span>
+                                <a href="#">
+                                    <span class="material-icons" onclick="showModal('EDITAR','Editar',${nCon(key.id)});">
+                                        mode_edit
+                                    </span>
+                                </a>
                             </td>
                         </tr>`);
                 });
