--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                             </li>
 
                             <li class="pt-2 pl-4">
-                                <a href="">
+                                <a href="/Carriers">
                                     <div class="material-icons size-18 pr-1">local_shipping</div>
                                     <label>Transportistas</label>
                                 </a>
