--- a/KLS_WEB/KLS_WEB/Views/Carriers/Operators/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Operators/Index.cshtml
@@ -2,11 +2,11 @@
 @{
     ViewData["Title"] = "Transportista|Operadores";
 }
-
+@{ int id = ViewBag.id; }
 <div class="data-content p-4 text-left">
     <div class="p-4">
         <div class="text-left d-flex mb-3">
-            <a href="/Carriers">
+            <a href="/Carriers/formCarriers/@id">
                 <div class="material-icons icon-red">arrow_back</div>
             </a>
             <div class="text-uppercase poppins medium size-24 pl-2">Operadores</div>
