--- a/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
@@ -164,6 +164,7 @@
                             </div>
                         </div>
                     </div>
+
                 </form>
             </div>
 
@@ -188,7 +189,7 @@
                         </div>
                     </a>
 
-                    <a href="/Carriers/Library" class="catalog">
+                    <a href="/Carriers/Library/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 store
@@ -197,7 +198,7 @@
                         </div>
                     </a>
 
-                    <a href="/Carriers/Contacts" class="catalog">
+                    <a href="/Carriers/Contacts/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 call
@@ -206,7 +207,7 @@
                         </div>
                     </a>
 
-                    <a href="/Carriers/Certifications" class="catalog">
+                    <a href="/Carriers/Certifications/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 workspace_premium
@@ -215,7 +216,7 @@
                         </div>
                     </a>
 
-                    <a href="/Carriers/Box" class="catalog">
+                    <a href="/Carriers/Box/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 all_inbox
@@ -224,7 +225,7 @@
                         </div>
                     </a>
 
-                    <a href="/Carriers/Routes" class="catalog">
+                    <a href="/Carriers/Routes/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 commute
@@ -270,7 +271,6 @@
                         $(".guardar").attr("disabled", false);
                     });
                 }
-                
             });
         });
 
