--- a/KLS_WEB/KLS_WEB/Views/Carriers/Routes/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Routes/Index.cshtml
@@ -2,14 +2,21 @@
 @{
     ViewData["Title"] = "Transportista|Rutas";
 }
-
+@{ int id = ViewBag.id; }
 <div class="data-content p-4 text-left">
     <div class="p-4">
         <div class="text-left d-flex mb-3">
-            <a href="/Carriers">
+            <a href="/Carriers/Routes/formRoutes/@id">
                 <div class="material-icons icon-red">arrow_back</div>
             </a>
-            <div class="text-uppercase poppins medium size-24 pl-2">RUTAS</div>
+            <div class="text-uppercase poppins medium size-24 pl-2">RUTAS TRANSPORTISTAS</div>
+            <div style="padding-left:10%;">
+                <a class="btn btn-sm btn-dark" href="/Carriers/Routes/formRoutes/@id">
+                    <span class="material-icons">
+                        add
+                    </span>
+                </a>
+            </div>
         </div>
 
         <div class="p-4 shadow bg-white">
@@ -30,3 +37,14 @@
 
     </div>
 </div>
+@section Scripts{ 
+    <script>
+        $(window).ready(function () {
+
+        });
+
+        function loadTable() {
+
+        }
+    </script>
+}
