--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             <!-- END TOP BAR -->
             <div class="wrapper">
                 <!-- LEFT BAR -->
-                <div class="left-bar bg-dark text-white pt-2 expand">
+                <div id="left_bar" class="left-bar bg-dark text-white pt-2 left_bar expand">
                     <div class="bar-container">
                         <div class="expand-control unselectable">
                             <div class="material-icons arrow-bar size-32 c-pointer pl-3">chevron_right</div>
@@ -150,6 +150,35 @@
     <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
+
+        $("#left_bar").click(function () {
+            if ($("#left_bar").hasClass("expand")) {
+                $("#left_bar").removeClass("expand");
+            } else {
+                $("#left_bar").addClass("expand");
+            }
+        });
+
+        $(document).ready(function () {
+            updateContainer();
+            $(window).resize(function () {
+                updateContainer();
+            });
+        });
+
+        function updateContainer() {
+            var $containerHeight = $(window).height();
+            if ($containerHeight <= 818) {
+                $("#left_bar").removeClass("expand");
+            }
+            if ($containerHeight > 819) {
+                $("#left_bar").addClass("expand");
+            }
+        }
+
+      
+
+
         function dTable(table) {
             $('.' + table).DataTable({
                 language: {
