--- a/KLS_WEB/KLS_WEB/Views/Travels/formTravels.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/formTravels.cshtml
@@ -1,23 +1,26 @@
 ﻿@{
-    ViewData["Title"] = "Configuracion del viaje";
+    ViewData["Title"] = "Configuracion transportista";
 }
 
 @{ int id = ViewBag.id; }
 
+@section Styles{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
+}
 
 <div class="data-content p-4 text-left">
     <div class="p-4">
         <div class="text-left d-flex mb-3">
-            <a href="/Travels">
+            <a href="/Carriers">
                 <div class="material-icons icon-red">arrow_back</div>
             </a>
             <div class="text-uppercase poppins medium size-24 pl-2">Transportista</div>
         </div>
         <div class="row">
             <div class="col-md-4 text-right">
-                
+
                 <form id="frmRegister" action="#" method="post">
-                    
+
                     <button class="btn btn-sm" type="submit" style="background-color:transparent;">
                         <span class="material-icons" style="color:cornflowerblue;">
                             save
