--- a/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
@@ -170,8 +170,7 @@
 
             <div class="col-md-8">
                 <div class="catalog-list">
-
-                    <a href="/Carriers/Operators" class="catalog">
+                    <a href="/Carriers/Operators/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 people
@@ -180,7 +179,7 @@
                         </div>
                     </a>
 
-                    <a href="/Carriers/Inventory" class="catalog">
+                    <a href="/Carriers/Inventory/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 local_shipping
