--- a/KLS_WEB/KLS_WEB/Views/Carriers/Inventory/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Inventory/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Transportista|Inventario";
 }
 @{ int id = ViewBag.id; }
+
 <div class="data-content p-4 text-left">
     <div class="p-4">
         <div class="text-left d-flex mb-3">
@@ -10,6 +11,13 @@
                 <div class="material-icons icon-red">arrow_back</div>
             </a>
             <div class="text-uppercase poppins medium size-24 pl-2">INVENTARIO</div>
+            <div style="padding-left:10%;">
+                <button class="btn btn-sm btn-dark" onclick="showModal('AGREGAR','Agregar');">
+                    <span class="material-icons">
+                        add
+                    </span>
+                </button>
+            </div>
         </div>
 
         <div class="p-4 shadow bg-white">
@@ -37,3 +45,201 @@
 
     </div>
 </div>
+
+<!--Modal global-->
+<div class="modal fade" id="modalDiv" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="titulo-modal"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-left">
+                <form id="frmRegister" action="#" method="post">
+                    <input type="hidden" name="id" id="idEditar" value="0" />
+                    <div class="row">
+
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="">Marca</label>
+                                <input type="text" class="form-control" name="Marca" id="Marca"/>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <label class="">Modelo</label>
+                            <select class="form-control form-control-sm" name="Modelo" id="Modelo">
+                                <option value="0">Selecciona</option>
+                            </select>
+                        </div>
+
+                        <div class="col-md-3">
+                            <label class="">Año</label>
+                            <input type="text" name="Anio" id="Anio" class="form-control"/>
+                        </div>
+
+                        <div class="col-md-3">
+                            <label class=""># serie</label>
+                            <input type="text" name="NoSerie" id="NoSerie" class="form-control"/>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-md-3">
+                            <label class=""># económico</label>
+                            <input type="text" class="form-control" name="NoEconomico" id="NoEconomico">
+                        </div>
+                        <div class="col-md-3">
+                            <label class="">Placa</label>
+                            <input type="text" class="form-control" name="Placa" id="Placa">
+                        </div>
+                        <div class="col-md-3">
+                            <label class="">Color</label>
+                            <input type="text" class="form-control" name="Color" id="Color">
+                        </div>
+                        <div class="col-md-3">
+                            <label class="">Tipo de Unidad</label>
+                            <select class="form-control form-control-sm" name="TipoUnidad" id="TipoUnidad">
+                                <option value="0">Selecciona</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-3">
+                            <label class="">Capacidad</label>
+                            <input type="text" class="form-control" name="Capacidad" id="Capacidad">
+                        </div>
+
+                        <div class="col-md-3">
+                            <label class="">Volumen</label>
+                            <input type="text" class="form-control" name="Volumen" id="Volumen">
+                        </div>
+                        <div class="col-md-3">
+                            <label class="">Estatus</label>
+                            <select class="form-control form-control-sm" name="Estatus" id="Estatus">
+                                <option value="1">Activo</option>
+                                <option value="0">Inactivo</option>
+                            </select>
+                        </div>
+                    </div>
+                    <br />
+                    <h5>Archivos</h5>
+                    <div class="row">
+    
+                        <div class="col-md-6">
+                            <label class="">Foto de la unidad</label>
+                            <div class="custom-file">
+                                <input type="file" class="form-control form-control-sm" name="FotoUnidad" id="FotoUnidad">
+                                <label class="custom-file-label" for="FotoUnidad">Seleccionar archivo</label>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <label class="">Póliza de seguro</label>
+                            <div class="custom-file">
+                                <input type="file" class="form-control" name="FotoPoliza" id="FotoPoliza">
+                                <label class="custom-file-label" for="FotoPoliza">Seleccionar archivo</label>
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+                    <button type="submit" class="btn btn-dark guardar" style="width:20%;" id="btnAccion">
+                        Guardar
+                    </button>
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" data-dismiss="modal">Cerrar</button>
+                @*<button type="button" class="btn btn-primary">Save changes</button>*@
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal global-->
+@section Scripts{
+    <script>
+        var dataInventory = [];
+
+        $(window).ready(function () {
+            //loadTable();
+            $("#frmRegister").submit(function (event) {
+                event.preventDefault();
+                var jsonData = convertJson($("#frmRegister"));
+                jsonData["Id_Transportista"] = @id;
+                console.log(jsonData);
+                //if (parseInt($("#idEditar").val()) != 0) {
+                //    $.post("/Carriers/Library/putLibrary", jsonData, function (res) {
+                //        console.log(res);
+                //        loadTable();
+                //        dToast("success", "Registro actualizado exitosamente.", "Registrado");
+                //        $(".guardar").attr("disabled", false);
+                //    }).fail(function (error) {
+                //        dToast("error", "Error al tratar de guardar el registro", "Error");
+                //        $(".guardar").attr("disabled", false);
+                //    });
+                //} else {
+                //    $.post("/Carriers/Library/setLibrary", jsonData, function (res) {
+                //        loadTable();
+                //        dToast("success", "Se guardo el registro", "Registrado");
+                //        $(".guardar").attr("disabled", false);
+                //        $('#frmRegister').trigger("reset");
+                //    }).fail(function (error) {
+                //        dToast("error", "Error al tratar de guardar el registro", "Error");
+                //        $(".guardar").attr("disabled", false);
+                //    });
+                //}
+            });
+
+        });
+
+        function showModal(titulo = "Title", accion, idEditar = 0) {
+            $('#frmRegister').trigger("reset");
+            $(".guardar").html(accion);
+            $("#titulo-modal").empty("");
+            $("#titulo-modal").html(titulo);
+            $("#idEditar").val(idEditar);
+            if (accion == "Editar") {
+                try {
+                    let indice = dataLibrary.findIndex(service => service.id === idEditar);
+                    $("#Nombre").val(dataLibrary[indice].nombre);
+                    $('#Estatus option[value="' + dataLibrary[indice].estatus + '"]').attr("selected", true);
+                    $("#modalDiv").modal("show");
+                } catch (error) {
+                    dToast("error", "Error al tratar de editar, intenta recargar la página.", "Error");
+                    $("#modalDiv").modal("hide");
+                }
+            } else {
+                $("#modalDiv").modal("show");
+            }
+        }
+
+        function loadTable() {
+            var stable = $('.table-viajes').DataTable();
+            stable.destroy();
+            $("#table-info").empty();
+            $.get("/Carriers/Inventory/getInventory/", { "Id_Transportista":@id}, function (res) {
+                dataInventory = res;
+                console.log(res);
+                //$.each(dataInventory, function (item, key) {
+                //    $("#table-info").append(`
+                //             <tr>
+                //                <td>${nCon(key.nombre)}</td>
+                //                <td>`+ statusTable(key.estatus) + `</td>
+                //                <td>
+                //                    <a href="#">
+                //                        <span class="material-icons" onclick="showModal('EDITAR','Editar',${nCon(key.id)});">
+                //                            mode_edit
+                //                        </span>
+                //                    </a>
+                //                </td>
+                //            </tr>`);
+                //});
+                //dTable("table-viajes");
+            });
+        }
+    </script>
+}
