--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                                 </a>
                             </li>
                             <li class="pt-2 pl-4">
-                                <a href="">
+                                <a href="/Travels">
                                     <div class="material-icons size-18 pr-1">flight_takeoff</div>
                                     <label>Viajes</label>
                                 </a>
